--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,12 +45,18 @@ endif()
 
 option (GF_COMPLETE_ROOT "Path to gf-complete")
 
+if (NOT GF_COMPLETE_ROOT)
+  set(GF_COMPLETE_ROOT $ENV{HOME}/gf-complete/)
+
+  message("gf-complete headers set to: ${GF_COMPLETE_ROOT}")
+endif ()
+
 find_path(GF_COMPLETE_INCLUDE_DIR gf_complete.h PATHS "${GF_COMPLETE_ROOT}/include")
 if (NOT GF_COMPLETE_INCLUDE_DIR)
   message(FATAL_ERROR "gf-complete headers not found")
 endif ()
 
-find_library(GF_COMPLETE_LIBRARY libgf_complete.a PATHS "${GF_COMPLETE_ROOT}/lib")
+find_library(GF_COMPLETE_LIBRARY libgf_complete.a PATHS "${GF_COMPLETE_ROOT}/src/.libs")
 if (NOT GF_COMPLETE_LIBRARY)
   message(FATAL_ERROR "gf-complete library not found")
 endif ()
